Viewport mipmaps no longer toggle off #44464

Closed
opened 2015-04-21 13:40:46 +02:00 by Romaine Rose-Cameron · 9 comments

System Information
Linux mint 17.1 AMD64, i7 4000, GTX870m

Blender Version
Broken: 2.74.4 62e1498 (the latest builds)
Worked: 2.74 000dfc0 (and prior)

Short description of error
The OpenGL mipmaps option does not have an effect on the viewport as it used to. Textures are still mipmapped, as can be seen in all opengl render modes and engines appart from rendered view. (yeah I'm a minecraft guy lol) I need it so I don't to keep making high res textures for my tiny 64x64 needs.

Exact steps for others to reproduce the error
File > User Preferences > System > OpenGL > Mipmaps

When toggled, this should be immediately visible in the viewport, although saving the preferences and restarting blender still doesn't make a difference VMComix_minecraft_rig(Romaines_1.8_UV_update).blend.

**System Information** Linux mint 17.1 AMD64, i7 4000, GTX870m **Blender Version** Broken: 2.74.4 62e1498 (the latest builds) Worked: 2.74 000dfc0 (and prior) **Short description of error** The OpenGL mipmaps option does not have an effect on the viewport as it used to. Textures are still mipmapped, as can be seen in all opengl render modes and engines appart from rendered view. (yeah I'm a minecraft guy lol) I need it so I don't to keep making high res textures for my tiny 64x64 needs. **Exact steps for others to reproduce the error** File > User Preferences > System > OpenGL > Mipmaps When toggled, this should be immediately visible in the viewport, although saving the preferences and restarting blender still doesn't make a difference [VMComix_minecraft_rig(Romaines_1.8_UV_update).blend](https://archive.blender.org/developer/F164976/VMComix_minecraft_rig_Romaines_1.8_UV_update_.blend).

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Romaine-4

Added subscriber: @Romaine-4
Antonis Ryakiotakis was assigned by Julian Eisel 2015-04-21 18:00:14 +02:00
Member

Added subscribers: @Psy-Fi, @JulianEisel

Added subscribers: @Psy-Fi, @JulianEisel
Member

@Psy-Fi, this is another one for you!

@Psy-Fi, this is another one for you!

Added subscriber: @lamoot

Added subscriber: @lamoot

Hello,

I can confirm the issue here. In 2.74 mipmaps get enabled/disabled properly. In the latest build I tried, the option doesn't work anymore, even when saving it and restarting Blender. The problem is for both Multitexture and GLSL shading.

Broken: blender-2.74-bdf6393-win64
I'm on Win7 64bit, mobility radeon 5650.

Hello, I can confirm the issue here. In 2.74 mipmaps get enabled/disabled properly. In the latest build I tried, the option doesn't work anymore, even when saving it and restarting Blender. The problem is for both Multitexture and GLSL shading. Broken: blender-2.74-bdf6393-win64 I'm on Win7 64bit, mobility radeon 5650.

This issue was referenced by 84db9fdf4d

This issue was referenced by 84db9fdf4dd3bb5e1ddd6c2884787033386ac2ca

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 84db9fdf4d.

Closed by commit 84db9fdf4d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44464
No description provided.