Fix T44464: Viewport mipmaps no longer toggle off